--- a/style.css
+++ b/style.css
@@ -30,12 +30,20 @@ body {
 
 main#container {
     margin: 88px auto 65px;
-    
-    /* BACKGROUND PARA VISUALIZAR A POSIÇÃO DO CONTAINER */
-    background-color: white;
-
     width: 1120px;
     height: 3054px;
+}
+
+section#description-image {
+    margin: 40px 0;
+}
+
+section#description-image > img {
+    width: 1120px;
+    height: 660px;
+
+    margin-bottom: 24px;
+    border-radius: 28px;
 }
 
 h1 {
@@ -49,4 +57,11 @@ h1 {
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.subtitle {
+    font-size: 16px;
+    font-style: italic;
+    color: var(--text-secondary);
+    text-align: center;
 }
