--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ section#description-image > img {
     width: 1120px;
     height: 660px;
 
+    padding-top: 4px;
     margin-bottom: 24px;
     border-radius: 28px;
 }
