--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ main#container {
     height: 3054px;
 }
 
+main#container > header#title-page > h1 {
+    margin-top: 8px;
+}
+
 section#description-image {
     margin: 40px 0;
 }
@@ -47,9 +51,18 @@ section#description-image > img {
     border-radius: 28px;
 }
 
+section#title-list {
+    margin: 64px 0;
+}
+
+
 h1 {
     font-size: 36px;
     font-weight: bold;
+}
+
+h2 {
+    margin-top: 2px;
 }
 
 .headline {
