--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 :root {
     font-family: "Open Sans", sans-serif;
+    color: var(--text-secondary);
 
     /* Background y Border */
     --background-default: #F5F4F0;
@@ -55,6 +56,13 @@ section#title-list {
     margin: 64px 0;
 }
 
+section#title-list > section#title {
+    margin-bottom: 8px;
+}
+
+h1, h2, h3 {
+    color: var(--text-primary);
+}
 
 h1 {
     font-size: 36px;
@@ -62,7 +70,18 @@ h1 {
 }
 
 h2 {
+    font-size: 32px;
+    font-weight: bold;
     margin-top: 2px;
+}
+
+h3 {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 16px;
 }
 
 .headline {
